--- a/14-Zabbix/Vagrantfile
+++ b/14-Zabbix/Vagrantfile
@@ -48,9 +48,9 @@ Vagrant.configure("2") do |config|
   config.vm.box = "centos/7"
   #config.vm.synced_folder "src/", "/srv/website"
   config.vm.define "server1" do |server1|
-  server1.vm.network "private_network", ip: "192.168.59.51"
+  server1.vm.network "private_network", ip: "192.168.10.10"
   server1.vm.network "public_network", bridge: "Intel(R) Ethernet Connection (4) I219-LM"
-  server1.vm.hostname = "14-Zabbix-1"
+  server1.vm.hostname = "14-Zabbix-1.ram.com"
   
   server1.vm.provider "virtualbox" do |vb|
 	vb.gui = false
